# Black-Hat-AI

./: .gitignore  README.md
chapters/ch02/: .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt
chapters/ch02/Core/: listing_2_01_message_observation.py  listing_2_02_tool_schema.py  listing_2_03_pingtool.py  listing_2_04_agent_interface.py  listing_2_05_artifact_logger.py  listing_2_06_general_langchain_adapter.py  listing_2_07_langchain_pingtool.py  listing_2_08_exec_agent.py  listing_2_09_reflection.py  listing_2_10_safety_gate.py  listing_2_11_autogen_example.py  listing_2_12_autogen_adapter.py  listing_2_13_universal_adapter_selector.py  listing_2_14_simple_gate.py  listing_2_15_adding_record.py  listing_2_16_global_kill_switch.py  listing_2_17_planning_reasoning.py  listing_2_18_reflection.py
chapters/ch02/data/: __init__.py  nmap_output.txt  nmap_output_clean.txt  nmap_output_mixed.txt  targets.json  targets.py
chapters/ch02/docs/: ch2_action_plan.md  ch2_extracted.md  ch2_v2_extracted.md  listings_reference.md
chapters/ch02/scripts/: __init__.py  example_01_basic_agent.py  example_01_minimal_agent.py  example_02_safety_gate.py  example_03_autogen.py  example_04_memory_buffer.py  example_05_artifact_logging.py  example_06_planning.py  example_07_reflection.py  example_08_nmap_triage.py
chapters/ch02/src/: __init__.py
chapters/ch02/src/adapters/: __init__.py  selector.py
chapters/ch02/src/adapters/autogen/: __init__.py  agent.py
chapters/ch02/src/adapters/langchain/: __init__.py  agent.py  tools.py
chapters/ch02/src/core/: __init__.py  agent.py  logger.py  models.py  tool.py
chapters/ch02/src/safety/: __init__.py  gates.py  kill_switch.py
chapters/ch02/src/tools/: __init__.py  extract_urls.py  nmap_parser.py  ping.py  summarize_urls.py  triage_analyzer.py
chapters/ch02/tests/: __init__.py
chapters/ch02/tests/test_core/: test_logger.py  test_models.py
chapters/ch02/tests/test_safety/: __init__.py  test_gates.py
chapters/ch02/tests/test_tools/: test_extract_urls.py  test_nmap_parser.py  test_ping.py  test_summarize_urls.py  test_triage_analyzer.py
chapters/ch03/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chapters/ch03/data/: __init__.py  scope.json  targets.py
chapters/ch03/docs/: action_plan_ch3_v2.md  implementation_summary_ch3_v2.md
chapters/ch03/scripts/: __init__.py  example_01_sequential.py  example_02_artifacts.py  example_03_orchestrator.py  example_04_gate_patterns.py  example_05_resilience.py  example_06_visualization.py  example_07_capstone.py
chapters/ch03/src/: __init__.py
chapters/ch03/src/adapters/: __init__.py  base.py
chapters/ch03/src/adapters/langchain/: __init__.py  agent.py
chapters/ch03/src/agents/: __init__.py  base.py  recon.py  recon_normalize.py  report.py  triage.py
chapters/ch03/src/core/: __init__.py  artifact.py  logger.py  models.py  orchestrator.py
chapters/ch03/src/gates/: __init__.py  approval_gate.py  base.py  environment_gate.py  global_gate.py  scope_gate.py  time_window_gate.py
chapters/ch03/src/resilience/: __init__.py  alerts.py  checkpoint.py  retry.py
chapters/ch03/src/visualization/: __init__.py  mermaid.py  trace.py
chapters/ch03/tests/: __init__.py
chapters/ch03/tests/test_agents/: test_agents.py  test_recon_normalize.py
chapters/ch03/tests/test_core/: __init__.py  test_artifact.py  test_orchestrator.py
chapters/ch03/tests/test_gates/: __init__.py  test_gates.py
chapters/ch03/tests/test_resilience/: test_retry.py
chapters/ch04/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chapters/ch04/data/: sample_recon.jsonl  scope.json
chapters/ch04/docs/: listings_reference.md
chapters/ch04/scripts/: __init__.py  analyze_results.py  example_with_scope.py  run_recon.py
chapters/ch04/src/: __init__.py
chapters/ch04/src/core/: __init__.py  artifacts.py
chapters/ch04/src/recon/: __init__.py  constants.py  content.py  dns.py  http.py  pipeline.py  sanitize.py  tls.py  waf.py
chapters/ch04/src/safety/: __init__.py  gates.py  scope.py
chapters/ch04/tests/: conftest.py
chapters/ch04/tests/test_core/: test_artifacts.py
chapters/ch04/tests/test_recon/: test_constants.py  test_dns.py  test_sanitize.py  test_waf.py
chapters/ch04/tests/test_safety/: test_gates.py  test_scope.py
